Implemented the new footer with social media buttons.

--- a/basket.html
+++ b/basket.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Basket</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -16,5 +17,19 @@
         <a href="about.html">About</a>
     </div>
 </header>
+<footer>
+    <div class="botnav">
+        <a><b>Copyright Company 2021</b></a>
+    </div>
+    <div class="botnav">
+        <a>Data Policy</a>
+    </div>
+    <div class="botnav">
+        <a>Contact</a>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+    </div>
+</footer>
 </body>
 </html>
