Added some products to the webpage

--- a/products.html
+++ b/products.html
@@ -17,6 +17,71 @@
         <a href="about.html">About</a>
     </div>
 </header>
+
+<h1>PRODUCTS</h1>
+<div class="product-container">
+    <div class="product-card">
+        <div class="product-image">
+            <img src="images/pc1.webp" class="product-thumb" alt="">
+        </div>
+        <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line about the cloth..</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+        </div>
+    </div>
+    <div class="product-card">
+        <div class="product-image">
+            <img src="images/pc2.webp" class="product-thumb" alt="">
+        </div>
+        <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line about the cloth..</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+        </div>
+    </div>
+    <div class="product-card">
+        <div class="product-image">
+            <img src="images/pc3.webp" class="product-thumb" alt="">
+        </div>
+        <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line about the cloth..</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+        </div>
+    </div>
+    <div class="product-card">
+        <div class="product-image">
+            <img src="images/pc4.webp" class="product-thumb" alt="">
+        </div>
+        <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line about the cloth..</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+        </div>
+    </div>
+    <div class="product-card">
+        <div class="product-image">
+            <img src="images/pc5.webp" class="product-thumb" alt="">
+        </div>
+        <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line about the cloth..</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+        </div>
+    </div>
+    <div class="product-card">
+        <div class="product-image">
+            <img src="images/pc6.webp" class="product-thumb" alt="">
+        </div>
+        <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line about the cloth..</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+        </div>
+    </div>
+</div>
+
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
