Programmed the products page and added a product with links to it.

--- a/products.html
+++ b/products.html
@@ -19,66 +19,76 @@
 </header>
 
 <h1>PRODUCTS</h1>
-<div class="product-container">
-    <div class="product-card">
-        <div class="product-image">
-            <img src="images/pc1.webp" class="product-thumb" alt="">
-        </div>
-        <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">a short line about the cloth..</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-        </div>
+<div class="card">
+    <img class="pc-images" src="images/pc1.webp" alt="Image">
+    <div class="container">
+        <h4><a href="products/product1.html"><b>Gaming PC 1</b></a></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio.</p>
+        <ul>
+            <li>Price 1000€</li>
+            <li>Model 552x</li>
+        </ul>
+        <button class="button hov">Buy</button>
     </div>
-    <div class="product-card">
-        <div class="product-image">
-            <img src="images/pc2.webp" class="product-thumb" alt="">
-        </div>
-        <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">a short line about the cloth..</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-        </div>
+</div>
+<div class="card">
+    <img class="pc-images" src="images/pc2.webp" alt="Image">
+    <div class="container">
+        <h4><a href="products/product1.html"><b>Gaming PC 2</b></a></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio.</p>
+        <ul>
+            <li>Price 1100€</li>
+            <li>Model 553x</li>
+        </ul>
+        <button class="button hov">Buy</button>
     </div>
-    <div class="product-card">
-        <div class="product-image">
-            <img src="images/pc3.webp" class="product-thumb" alt="">
-        </div>
-        <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">a short line about the cloth..</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-        </div>
+</div>
+<div class="card">
+    <img class="pc-images" src="images/pc3.webp" alt="Image">
+    <div class="container">
+        <h4><a href="products/product1.html"><b>Gaming PC 3</b></a></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio.</p>
+        <ul>
+            <li>Price 1200€</li>
+            <li>Model 554x</li>
+        </ul>
+        <button class="button hov">Buy</button>
     </div>
-    <div class="product-card">
-        <div class="product-image">
-            <img src="images/pc4.webp" class="product-thumb" alt="">
-        </div>
-        <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">a short line about the cloth..</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-        </div>
+</div>
+<div class="card">
+    <img class="pc-images" src="images/pc4.webp" alt="Image">
+    <div class="container">
+        <h4><a href="products/product1.html"><b>Gaming PC 4</b></a></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio.</p>
+        <ul>
+            <li>Price 1300€</li>
+            <li>Model 555x</li>
+        </ul>
+        <button class="button hov">Buy</button>
     </div>
-    <div class="product-card">
-        <div class="product-image">
-            <img src="images/pc5.webp" class="product-thumb" alt="">
-        </div>
-        <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">a short line about the cloth..</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-        </div>
+</div>
+<div class="card">
+    <img class="pc-images" src="images/pc5.webp" alt="Image">
+    <div class="container">
+        <h4><a href="products/product1.html"><b>Gaming PC 5</b></a></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio.</p>
+        <ul>
+            <li>Price 1400€</li>
+            <li>Model 556x</li>
+        </ul>
+        <button class="button hov">Buy</button>
     </div>
-    <div class="product-card">
-        <div class="product-image">
-            <img src="images/pc6.webp" class="product-thumb" alt="">
-        </div>
-        <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">a short line about the cloth..</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-        </div>
+</div>
+<div class="card">
+    <img class="pc-images" src="images/pc6.webp" alt="Image">
+    <div class="container">
+        <h4><a href="products/product1.html"><b>Gaming PC 6</b></a></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio.</p>
+        <ul>
+            <li>Price 1500€</li>
+            <li>Model 557x</li>
+        </ul>
+        <button class="button hov">Buy</button>
     </div>
 </div>
 
