--- a/basket.html
+++ b/basket.html
@@ -17,6 +17,10 @@
         <a href="about.html">About</a>
     </div>
 </header>
+
+<h1>BASKET</h1>
+<p class="basket-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio. Sed consectetur metus dignissim dictum vestibulum. Curabitur nulla diam, dictum eget nisl porta, iaculis sagittis enim. In interdum velit eget leo cursus, quis lobortis est venenatis. </p>
+
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
