--- a/basket.html
+++ b/basket.html
@@ -21,6 +21,64 @@
 <h1>BASKET</h1>
 <p class="basket-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio. Sed consectetur metus dignissim dictum vestibulum. Curabitur nulla diam, dictum eget nisl porta, iaculis sagittis enim. In interdum velit eget leo cursus, quis lobortis est venenatis. </p>
 
+<table class="basket-table">
+    <tr>
+        <th style="width: 10%">Image</th>
+        <th style="width: 20%">Product</th>
+        <th style="width: 20%">Price</th>
+        <th style="width: 10%">Units</th>
+        <th style="width: 20%">Total</th>
+        <th style="width: 20%">Actions</th>
+    </tr>
+    <tr>
+        <td class="basket-img-table"> <img class="basket-icon" src="images/pc1.webp" alt=""></td>
+        <td>Gaming PC 1</td>
+        <td>1000€</td>
+        <td>1</td>
+        <td>1000€</td>
+        <td><button class="button hov">Delete</button></td>
+    </tr>
+    <tr>
+        <td class="basket-img-table"> <img class="basket-icon" src="images/pc2.webp" alt=""></td>
+        <td>Gaming PC 2</td>
+        <td>1000€</td>
+        <td>1</td>
+        <td>1000€</td>
+        <td><button class="button hov">Delete</button></td>
+    </tr>
+    <tr>
+        <td class="basket-img-table"> <img class="basket-icon" src="images/pc3.webp" alt=""></td>
+        <td>Gaming PC 3</td>
+        <td>1000€</td>
+        <td>1</td>
+        <td>1000€</td>
+        <td><button class="button hov">Delete</button></td>
+    </tr>
+    <tr>
+        <td class="basket-img-table"> <img class="basket-icon" src="images/pc4.webp" alt=""></td>
+        <td>Gaming PC 4</td>
+        <td>1000€</td>
+        <td>1</td>
+        <td>1000€</td>
+        <td><button class="button hov">Delete</button></td>
+    </tr>
+    <tr>
+        <td class="basket-img-table"> <img class="basket-icon" src="images/pc5.webp" alt=""></td>
+        <td>Gaming PC 5</td>
+        <td>1000€</td>
+        <td>1</td>
+        <td>1000€</td>
+        <td><button class="button hov">Delete</button></td>
+    </tr>
+    <tr>
+        <td class="basket-img-table"> <img class="basket-icon" src="images/pc6.webp" alt=""></td>
+        <td>Gaming PC 6</td>
+        <td>1000€</td>
+        <td>1</td>
+        <td>1000€</td>
+        <td><button class="button hov">Delete</button></td>
+    </tr>
+</table>
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
