Corrected links and implemnted dataPolicy.html

--- a/about.html
+++ b/about.html
@@ -17,15 +17,27 @@
         <a><b>ABOUT</b></a>
     </div>
 </header>
+
+<h1>ABOUT</h1>
+<p class="p-lore">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio. Sed consectetur metus dignissim dictum vestibulum. Curabitur nulla diam, dictum eget nisl porta, iaculis sagittis enim. In interdum velit eget leo cursus, quis lobortis est venenatis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus dignissim ornare tortor. Vestibulum massa augue, placerat in ligula sed, auctor commodo neque. Maecenas in tempor quam, eget fermentum eros. Cras urna diam, viverra eget mi eu, vehicula lobortis elit. Phasellus vulputate nulla ut condimentum ultrices. Maecenas at vestibulum nisi, vitae dignissim ante. Mauris pulvinar purus eu nunc laoreet, eu efficitur nunc faucibus. Pellentesque aliquet a metus ac iaculis. Phasellus fermentum interdum diam, faucibus cursus lorem dictum sit amet.</p>
+<p class="p-lore">Ut tristique facilisis ex, quis scelerisque nulla hendrerit sed. Proin interdum pharetra nisi, vel sodales tellus faucibus et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed massa augue, dignissim eu lacus eget, fringilla fringilla enim. Nam dapibus molestie imperdiet. Aliquam orci ex, lobortis vestibulum posuere lacinia, lobortis ac sem. Suspendisse ex ante, dapibus in gravida ut, efficitur nec sapien. Cras sed turpis enim. Cras nisl lectus, scelerisque consectetur molestie non, vulputate et lorem. Maecenas at massa vehicula, hendrerit arcu sollicitudin, egestas ipsum. Aliquam diam metus, fermentum eget interdum vel, volutpat facilisis nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce sagittis vel massa vitae ultrices. Cras vitae est nisl.</p>
+
+<div style="text-align: center;">
+    <video controls class="about-video">
+        <source src="videos/video.mp4" type="video/mp4">
+    </video>
+</div>
+
+
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
     </div>
     <div class="botnav">
-        <a>Data Policy</a>
+        <a href="dataPolicy.html">Data Policy</a>
     </div>
     <div class="botnav">
-        <a>Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-google"></a>
