--- a/products.html
+++ b/products.html
@@ -97,10 +97,10 @@
         <a><b>Copyright Company 2021</b></a>
     </div>
     <div class="botnav">
-        <a>Data Policy</a>
+        <a href="dataPolicy.html">Data Policy</a>
     </div>
     <div class="botnav">
-        <a>Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-google"></a>
