--- a/products/product1.html
+++ b/products/product1.html
@@ -39,17 +39,15 @@
 </ol>
 <button class="button hov" style="margin-left: 2%">Buy</button>
 
-
-
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
     </div>
     <div class="botnav">
-        <a>Data Policy</a>
+        <a href="../dataPolicy.html">Data Policy</a>
     </div>
     <div class="botnav">
-        <a>Contact</a>
+        <a href="../contact.html">Contact</a>
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-google"></a>
