Implemented half of the contact.html file.

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,21 @@
         <a href="about.html">About</a>
     </div>
 </header>
+
+<div class="contact">
+    <img class="pc-images" src="images/owl.jpg" alt="Image">
+    <div class="container">
+        <h3 class="contact-card">Owl Computers</h3>
+        <a class="contact-card">Street </a> <br>
+        <a class="contact-card">Postal Code </a> <br>
+        <a class="contact-card">City (Country) </a> <br>
+        <ul>
+            <li>Email: owl@gmail.com</li>
+            <li>Phone: 3495857489433</li>
+        </ul>
+    </div>
+</div>
+
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
