Finished the mock-up project implementing the contact.html form.

--- a/basket.html
+++ b/basket.html
@@ -79,6 +79,8 @@
         <td><button class="button hov">Delete</button></td>
     </tr>
 </table>
+<p class="basket-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget auctor mi, eu scelerisque odio. Sed consectetur metus dignissim dictum vestibulum. Curabitur nulla diam, dictum eget nisl porta, iaculis sagittis enim. In interdum velit eget leo cursus, quis lobortis est venenatis. </p>
+<button class="button hov" style="margin-left: 2%">Checkout</button>
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
