--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,29 @@
     </div>
 </div>
 
+<h4>Contact form</h4>
+<div class="container">
+    <form>
+        <label for="fname">Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" placeholder="Your email here..">
+
+        <label for="date">Date</label>
+        <input type="date" id="date" name="date" placeholder="Date of today...">
+
+        <label for="phone">Phone number</label>
+        <input type="text" id="phone" name="phone" placeholder="Your phone number...">
+
+        <label for="subject">Message</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+        <input type="submit" value="Send">
+
+    </form>
+</div>
+
 <footer>
     <div class="botnav">
         <a><b>Copyright Company 2021</b></a>
